// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > renders 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders block 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-block="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders contrast 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-contrast="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders error 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-validation="error"
  >
    <input
      aria-invalid="true"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders large 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-size="large"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":ru:"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-search"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
        />
      </svg>
    </span>
    <input
      aria-describedby=":ru:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 2`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":r11:"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-search"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
        />
      </svg>
    </span>
    <input
      aria-describedby=":r11:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 3`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":r14:"
    >
      <div>
        Trailing
      </div>
    </span>
    <input
      aria-describedby=":r14:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 4`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":r17:"
    >
      <div>
        Trailing
      </div>
    </span>
    <input
      aria-describedby=":r17:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders monospace 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-monospace="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders placeholder 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      placeholder="560076"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders small 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-size="small"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders trailingAction icon button 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby=":r23:-loading-announcement"
        aria-labelledby=":r22:"
        class="sc-gEvEer dEeFcy prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n prc-Button-IconButton-GE6m6"
        data-component="IconButton"
        data-loading="false"
        data-no-visuals="true"
        data-size="small"
        data-variant="invisible"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-jugyt"
        data-direction="s"
        id=":r22:"
        popover="auto"
      >
        Icon label
      </span>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingAction text button 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby=":r1p:-loading-announcement"
        class="sc-gEvEer dEeFcy prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n"
        data-loading="false"
        data-no-visuals="true"
        data-size="medium"
        data-variant="invisible"
        type="button"
      >
        <span
          class="sc-gEvEer bLWYQi prc-Button-ButtonContent-KZ5Bz"
          data-component="buttonContent"
        >
          <span
            class="prc-Button-Label-B1e2-"
            data-component="text"
          >
            Clear
          </span>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingAction text button with a tooltip 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby=":r1u:-loading-announcement :r1t:"
        class="sc-gEvEer dEeFcy prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n"
        data-loading="false"
        data-no-visuals="true"
        data-size="medium"
        data-variant="invisible"
        type="button"
      >
        <span
          class="sc-gEvEer bLWYQi prc-Button-ButtonContent-KZ5Bz"
          data-component="buttonContent"
        >
          <span
            class="prc-Button-Label-B1e2-"
            data-component="text"
          >
            Clear
          </span>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-components-ConditionalTooltip-QBYW3 prc-TooltipV2-Tooltip-jugyt"
        data-direction="s"
        id=":r1t:"
        popover="auto"
        role="tooltip"
      >
        Clear input
      </span>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingVisual 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    
  


    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby=":r1b:"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id=":r1b:"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      aria-busy="false"
      class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
      data-trailing-visual="true"
    >
      <input
        aria-describedby=":r1b:"
        class="prc-components-Input-sKHcw"
        data-component="input"
        name="search"
        placeholder="Search"
        type="text"
      />
      <span
        aria-hidden="true"
        class="TextInput-icon"
        id=":r1b:"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextInput > renders trailingVisual 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    
  


    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby=":r1b:"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id=":r1b:"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby=":r1e:"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id=":r1e:"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      aria-busy="false"
      class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
      data-trailing-visual="true"
    >
      <input
        aria-describedby=":r1e:"
        class="prc-components-Input-sKHcw"
        data-component="input"
        name="search"
        placeholder="Search"
        type="text"
      />
      <span
        aria-hidden="true"
        class="TextInput-icon"
        id=":r1e:"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextInput > renders trailingVisual 3`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r1h:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":r1h:"
    >
      <div>
        Trailing
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingVisual 4`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r1k:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id=":r1k:"
    >
      <div>
        Trailing
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders with a loading indicator 1`] = `
<div>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r29:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r29:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r28:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2b:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r2d:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r2d:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2c:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r2i:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r2i:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2h:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2k:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r2k: :r2m:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r2m:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2l:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2p:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r2p: :r2r:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r2r:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2q:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2u:"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r2u: :r30:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r30:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r2v:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r34: :r35:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r35:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r34:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r37:"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r38: :r39:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r39:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r38:"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby=":r3d: :r3e:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r3e:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3d:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-size="small"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3g:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3g: :r3h: :r3i:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r3i:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3h:"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3l:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3l: :r3m: :r3n:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r3n:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3m:"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-size="large"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3q:"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3q: :r3r: :r3s:"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id=":r3s:"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id=":r3r:"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > should render a password input 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="password"
      type="password"
    />
  </span>
</div>
`;
